crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__a_bare_attribute_names_the_function.snap
---
source: crates/ohno_macros/src/enrich_err/mod.rs
expression: "rendered(TokenStream::new(), parse_quote!\n{ fn load() -> Result<(), MyError> { Err(MyError::new()) } })"
---
fn load() -> Result<(), MyError> {
    let __ohno_result = (|| -> Result<(), MyError> { Err(MyError::new()) })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new(
                    "error in function load",
                    ::core::file!(),
                    ::core::line!(),
                ),
            );
            __ohno_error
        })
}
