crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__a_literal_message_renders_without_format.snap
---
source: crates/ohno_macros/src/enrich_err/mod.rs
expression: "rendered(quote!(\"operation failed\"),\nparse_quote!(fn load() -> Result<(), MyError> { todo!() }))"
---
fn load() -> Result<(), MyError> {
    let __ohno_result = (|| -> Result<(), MyError> { todo!() })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new(
                    "operation failed",
                    ::core::file!(),
                    ::core::line!(),
                ),
            );
            __ohno_error
        })
}
