crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__an_async_function_awaits_an_async_block.snap
---
source: crates/ohno_macros/src/enrich_err/mod.rs
expression: "rendered(quote!(\"failed\"),\nparse_quote!(async fn load() -> Result<(), MyError> { Err(MyError::new()) }))"
---
async fn load() -> Result<(), MyError> {
    let __ohno_result = async { Err(MyError::new()) }.await;
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new("failed", ::core::file!(), ::core::line!()),
            );
            __ohno_error
        })
}
