crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__arguments_are_passed_through_unchanged.snap
---
source: crates/ohno_macros/src/enrich_err/mod.rs
expression: "rendered(quote!(\"read {} bytes\", data.len()),\nparse_quote!(fn load(data: &[u8]) -> Result<(), MyError> { todo!() }))"
---
fn load(data: &[u8]) -> Result<(), MyError> {
    let __ohno_result = (|| { todo!() })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new(
                    ::std::format!("read {} bytes", data.len()),
                    ::core::file!(),
                    ::core::line!(),
                ),
            );
            __ohno_error
        })
}
