crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__empty_enrich_err.snap
---
source: crates/ohno_macros/src/enrich_err/tests.rs
expression: format_tokens(result)
---
fn test_function() -> Result<(), OhnoErrorType> {
    (|| {
        let x = 42;
        let y = x * 2;
        println!("Result: {}", y);
        Ok(())
    })()
        .map_err(|mut e| {
            let msg = "error in function test_function";
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
