crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__function_with_inline_format_async.snap
---
source: crates/ohno_macros/src/enrich_err/tests.rs
expression: format_tokens(result)
---
async fn test_function(code: i32) -> Result<(), OhnoErrorType> {
    (async || { Ok(()) })()
        .await
        .map_err(|mut e| {
            let msg = format!("error code: {code}");
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
